# mr-transcript

./: .gitignore  CITATION.cff  LICENSE  README.md  README.uk.md  pyproject.toml
.agents/skills/mr-transcript/: SKILL.md
.agents/skills/mr-transcript/evals/: evals.json
.agents/skills/mr-transcript/scripts/: check_update.py
src/mr_transcript/: __init__.py  main.py  utils.py
tests/: test_utils.py
