[project]
name = "mr-transcript"
version = "0.1.2"
description = "A simple wrapper for youtube-transcript-api to get YouTube video transcripts with ease."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
keywords = [
    "youtube",
    "transcript",
    "youtube-transcript-api",
    "subtitles",
    "api-wrapper",
    "youtube-api",
    "automation",
    "video-transcription",
    "speech-to-text",
    "video-analysis",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
dependencies = [
    "youtube-transcript-api>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pre_commit",
    "twine",
]

[project.urls]
"Homepage" = "https://www.bogdanovych.org/en"
"Repository" = "https://github.com/BogdanovychA/mr-transcript"
"DOI" = "https://doi.org/10.5281/zenodo.19630758"
"Bug Tracker" = "https://github.com/BogdanovychA/mr-transcript/issues"
"AI Agent Skill" = "https://skills.sh/bogdanovycha/mr-transcript/mr-transcript"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "preserve"
